microservices/employee/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-employee 
  labels:
    app: mysql-employee
spec:
  selector:
    app: mysql-employee
  ports:
  - port: 3306
    targetPort: 3306
